--- a/PopcornApp/app/src/main/res/values/strings.xml
+++ b/PopcornApp/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="email">E-mail:</string>
     <string name="next">Next</string>
     <string name="back">Back</string>
+    <string name="title_activity_customer_info">Customer Information</string>
+    <string name="title_activity_scout_goal">Goal</string>
 </resources>
