Brandon - Nightly Build
Fixed some merging issues and added the screens that I will be working
on.

--- a/PopcornApp/app/src/main/res/values/strings.xml
+++ b/PopcornApp/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="back">Back</string>
     <string name="title_activity_customer_info">Customer Information</string>
     <string name="title_activity_scout_goal">Goal</string>
+    <string name="title_activity_delivery_mode">DeliveryMode</string>
+    <string name="title_activity_past_sales">PastSales</string>
 </resources>
