--- a/PopcornApp/app/src/main/res/values/strings.xml
+++ b/PopcornApp/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="title_activity_scout_goal">Goal</string>
     <string name="title_activity_delivery_mode">DeliveryMode</string>
     <string name="title_activity_past_sales">PastSales</string>
+    <string name="title_activity_DenLeaderMain">Den Leader Main</string>
 </resources>
