Migrated Dan's screens to new files using the wizard

--- a/PopcornApp/app/src/main/res/values/strings.xml
+++ b/PopcornApp/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="title_activity_scout_main_page">ScoutMainPage</string>
     <string name="title_activity_sales_mode">SalesMode</string>
     <string name="title_activity_delivery_customer_info">Delivery Customer Info</string>
+    <string name="title_activity_donation">Donation</string>
+    <string name="title_activity_order_finalization">Order Finalization</string>
+    <string name="title_activity_view_products">ViewProducts</string>
 </resources>
