--- a/PopcornApp/app/src/main/res/values/strings.xml
+++ b/PopcornApp/app/src/main/res/values/strings.xml
@@ -6,7 +6,9 @@
     <string name="title_activity_display_message">DisplayMessageActivity</string>
     <string name="fname">First Name:</string>
     <string name="lname">Last Name:</string>
-    <string name="address">Address:</string>
+    <string name="streetNumber">Street Number:</string>
+    <string name="streetName">Street Name:</string>
+    <string name="address">address:</string>
     <string name="city">City:</string>
     <string name="state">State:</string>
     <string name="zip">Zip Code:</string>
