--- a/PopcornApp/app/src/main/res/values/strings.xml
+++ b/PopcornApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Cub Scout Popcorn Selling</string>
+    <string name="app_name">Popcorn Selling</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
